zebra-state/src/service/finalized_state/disk_format/tests/snapshots/height_by_hash_raw_data@mainnet-2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[
  KV(
    k: "08ce3d9731b000c08338455c8a4a6bd05da16e26b11daa1b917184ece80f0400",
    v: "00000000",
  ),
  KV(
    k: "8392336da29773c56b1649ab555156ceb7e700ad7c230ea7a4571c7e22bc0700",
    v: "00000001",
  ),
  KV(
    k: "ed73e297d7c51cb8dc53fc2213d7e2e3f116eb4f26434496fc1926906ca20200",
    v: "00000002",
  ),
]
